@@ -1,3 +1,5 @@
+	- ~ and !~ operators in row queries now match anywhere in the cell
+
 2016-08-30 Release 3.2
 	- add timeout option for opening URLs (avoids long wait in unit
 	  tests)
